force-app/main/default/objects/GfTaxInvoiceItem__c/GfTaxInvoiceItem__c.object-meta.xml
<CustomObject>
    <label>세금계산서 상세</label>
    <nameField>
        <label>Tax Invoice Item Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>