force-app/main/default/objects/GfTaxInvoiceItem__c/fields/ProductID__c.field-meta.xml
<CustomField>
    <fullName>ProductID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product ID</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Gf Tax Invoice Item</relationshipLabel>
    <relationshipName>Gf_Tax_Invoice_Item</relationshipName>
    <type>Lookup</type>
</CustomField>