force-app/main/default/objects/GfTaxInvoiceItem__c/fields/RegistrationNumber__c.field-meta.xml
<CustomField>
    <fullName>RegistrationNumber__c</fullName>
    <label>Registration Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>