force-app/main/default/objects/GfTaxInvoiceItem__c/fields/SaleRevenue__c.field-meta.xml
<CustomField>
    <fullName>SaleRevenue__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Revenue</label>
    <referenceTo>SalesRevenue__c</referenceTo>
    <relationshipLabel>Tax Invoice Items</relationshipLabel>
    <relationshipName>Tax_Invoice_Items</relationshipName>
    <type>Lookup</type>
</CustomField>