force-app/main/default/objects/GfTaxInvoiceItem__c/fields/Specifications__c.field-meta.xml
<CustomField>
    <fullName>Specifications__c</fullName>
    <label>Specifications</label>
    <length>50</length>
    <type>Text</type>
</CustomField>