force-app/main/default/objects/GfTaxInvoiceItem__c/fields/TAX__c.field-meta.xml
<CustomField>
    <fullName>TAX__c</fullName>
    <label>TAX</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>