force-app/main/default/objects/GfTaxInvoiceItem__c/fields/TaxInvoice__c.field-meta.xml
<CustomField>
    <fullName>TaxInvoice__c</fullName>
    <label>Tax Invoice</label>
    <referenceTo>GfTaxInvoice__c</referenceTo>
    <relationshipLabel>Gf Tax Invoice Item</relationshipLabel>
    <relationshipName>Gf_Tax_Invoice_Item</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>