force-app/main/default/objects/GfTaxInvoiceItem__c/fields/TaxInvoiceDate__c.field-meta.xml
<CustomField>
    <fullName>TaxInvoiceDate__c</fullName>
    <label>Tax Invoice Date</label>
    <type>Date</type>
</CustomField>