force-app/main/default/objects/GfTaxInvoiceItem__c/fields/TAXInvoiceItem__c.field-meta.xml
<CustomField>
    <fullName>TAXInvoiceItem__c</fullName>
    <label>TAX Invoice Item</label>
    <length>50</length>
    <type>Text</type>
</CustomField>